--- a/CmLib/CmLib.vcxproj
+++ b/CmLib/CmLib.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Illustration\CmEvaluation.h" />
     <ClInclude Include="Illustration\CmShow.h" />
     <ClInclude Include="OtherAlg\CmCurveEx.h" />
+    <ClInclude Include="Saliency\CmSaliencyGC.h" />
     <ClInclude Include="Saliency\CmSaliencyRC.h" />
     <ClInclude Include="Segmentation\EfficientGraphBased\disjoint-set.h" />
     <ClInclude Include="Segmentation\EfficientGraphBased\segment-graph.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="Illustration\CmEvaluation.cpp" />
     <ClCompile Include="Illustration\CmShow.cpp" />
     <ClCompile Include="OtherAlg\CmCurveEx.cpp" />
+    <ClCompile Include="Saliency\CmSaliencyGC.cpp" />
     <ClCompile Include="Saliency\CmSaliencyRC.cpp" />
     <ClCompile Include="Segmentation\EfficientGraphBased\segment-image.cpp" />
     <ClCompile Include="stdafx.cpp">
