--- a/CmLib/CmLib.vcxproj.filters
+++ b/CmLib/CmLib.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClInclude Include="Segmentation\PlanarCut\code\PlanarException.h">
       <Filter>Segmentation\PlanarCut</Filter>
     </ClInclude>
+    <ClInclude Include="Illustration\CmIllu.h">
+      <Filter>Illustration</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -227,6 +230,9 @@
     </ClCompile>
     <ClCompile Include="Segmentation\PlanarCut\code\PlanarException.cpp">
       <Filter>Segmentation\PlanarCut</Filter>
+    </ClCompile>
+    <ClCompile Include="Illustration\CmIllu.cpp">
+      <Filter>Illustration</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
