--- a/CmDx/CmDx.vcxproj
+++ b/CmDx/CmDx.vcxproj
@@ -41,12 +41,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\DirectXTK\Inc;..\DXUT11;$(IncludePath)</IncludePath>
+    <IncludePath>.\;..\DirectXTK\Inc;..\DXUT11;$(IncludePath)</IncludePath>
     <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\DirectXTK\Inc;..\DXUT11;$(IncludePath)</IncludePath>
+    <IncludePath>.\;..\DirectXTK\Inc;..\DXUT11;$(IncludePath)</IncludePath>
     <TargetName>$(ProjectName)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
