--- a/Saliency/Saliency.vcxproj
+++ b/Saliency/Saliency.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E83E9B34-F6BB-417C-A1A8-66E7168AFF29}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>SaliencyICCV13</RootNamespace>
-    <ProjectName>SaliencyCVPR11_ICCV13</ProjectName>
+    <RootNamespace>Saliency</RootNamespace>
+    <ProjectName>Saliency</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
