Added project references

--- a/CurveExtractionHHME09/CurveExtractionHHME09.vcxproj
+++ b/CurveExtractionHHME09/CurveExtractionHHME09.vcxproj
@@ -155,6 +155,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CmLib\CmLib.vcxproj">
+      <Project>{925e8d9d-f4bb-431c-be63-5f95f6ccc460}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
