--- a/CmLib/CmLib.vcxproj
+++ b/CmLib/CmLib.vcxproj
@@ -27,26 +27,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -70,12 +70,12 @@
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <TargetName>$(ProjectName)d</TargetName>
     <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>.\;C:\SDKs\eigen;$(QtDir)include;$(OpenCV)include;$(OneDriveLib);$(CmGit);$(CUDA_PATH)\Include;$(CudaSample)\inc;$(KINECTSDK10_DIR)inc;$(Matlab)\extern\include\;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Tuf\Downloads\opencv_2.4.13\build\include;.\;C:\SDKs\eigen;$(QtDir)include;$(OpenCV)include;$(OneDriveLib);$(CmGit);$(CUDA_PATH)\Include;$(CudaSample)\inc;$(KINECTSDK10_DIR)inc;$(Matlab)\extern\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>.\;C:\SDKs\eigen;$(QtDir)include;$(OpenCV)include;$(OneDriveLib);$(CmGit);$(CUDA_PATH)\Include;$(CudaSample)\inc;$(KINECTSDK10_DIR)inc;$(Matlab)\extern\include\;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Tuf\Downloads\opencv_2.4.13\build\include;.\;C:\SDKs\eigen;$(QtDir)include;$(OpenCV)include;$(OneDriveLib);$(CmGit);$(CUDA_PATH)\Include;$(CudaSample)\inc;$(KINECTSDK10_DIR)inc;$(Matlab)\extern\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
