--- a/Saliency/Saliency.vcxproj
+++ b/Saliency/Saliency.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\CmLib\Saliency\ContrastEnhancer.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
